######################
New features and other changes:
1. Added some checks in InstallRemote.ps1 so if there are no Windows/Office updates, it skips those actions.
2. Changed versioning scheme. Will be using YYYY.MM.vv from now on. Where YYYY is year, MM is month, and vv is version for that month.
3. Added NetBanner install using newer version checking code to InstallRemote.ps1.

######################
#                    #
#      v1.3.0.6      #
#     June 2021      #
######################
New features and other changes:
1. Added function Convert-DatesToDays. Ex: Convert-DatesToDays 20210603 20210605 will return a value of 2.
2. Re-arranged some settings in config and updated wording on some things.
3. Changed default value of SCOffload to $true in config.
4. Added RebootTime to config.
5. Added ShutdownTime to config.
6. Bumped config to version 1.2.0.
7. Changed function Set-Reboot0100 to Set-Reboot. Also added ability to specify time down to the minute within a 24 hour window using the Time switch. If no time is specified the RebootTime config item is used.
8. Added function Set-Shutdown. If no time is specified the ShutdownTime config item is used.
9. Changed InstallRemote.ps1 so that if Microsoft updates are installed or a few select programs are installed the computer will reboot at the specified time (near the end of the file in the reboot check.)
10. Added function Get-ZuluTime.
11. Changed ActivClient install in InstallRemote.ps1 to only check 3 levels (vx.x.x) instead of 4 levels (vx.x.x.x.)
12. Changed 90meter install in InstallRemote.ps1 to newer version checking code.

######################
#                    #
#      v1.3.0.5      #
#      May 2021      #
######################
New features and other changes:
1. Added Update-VisioStencils function. Added Stencils config item.
2. Added Open-VisualStudioCodeSettings (aka Open-VSCodeSettings) function.
3. Added Windows 10 21H1 support to Get-HWInfo and Get-OperatingSystem.