@@ -11,6 +11,7 @@ New features and other changes:
 1. Added some checks in InstallRemote.ps1 so if there are no Windows/Office updates, it skips those actions.
 2. Changed versioning scheme. Will be using YYYY.MM.vv from now on. Where YYYY is year, MM is month, and vv is version for that month.
 3. Added NetBanner install using newer version checking code to InstallRemote.ps1.
+4. Added Encase install using newer version checking code to InstallRemote.ps1.
 
 ######################
 #                    #
